fix: Error messages truncated
Before the fix, when adding any information in the tool, if validation or other errors occurred, the informational messages at the top were truncated.
This fix ensures that the error messages are displayed in full, and it was estandardized in all the components that used this error messages.

Fixes #2527

--- a/src/app/profiles/profile-detail/profile-detail.component.scss
+++ b/src/app/profiles/profile-detail/profile-detail.component.scss
@@ -59,12 +59,3 @@ fieldset {
   font-size: 75%;
   color: rgba(0, 0, 0, 0.54);
 }
-
-.error-messages-container.mdc-list-item {
-  height: auto;
-  padding: 10px 0;
-}
-
-.error-messages {
-  white-space: break-spaces;
-}
